--- a/components/UI/BannerSlider/Banner/Banner.module.scss
+++ b/components/UI/BannerSlider/Banner/Banner.module.scss
@@ -20,10 +20,16 @@
                     }
                 }
             }
+            h2 {
+                color: $primary-blue;
+            }
         }
 
         .description {
             margin-top: 24px;
+            h4 {
+                color: $primary-blue;
+            }
         }
 
         .button {
@@ -35,10 +41,14 @@
         border-radius: 24px;
         width: 100%;
         overflow: hidden;
+        position: relative;
+        aspect-ratio: 1/0.78;
 
         img {
             width: 100%;
             height: 100%;
+            position: absolute;
+            object-fit: cover;
         }
     }
 }
@@ -132,8 +142,8 @@
         .imageContainer {
             margin-top: 40px;
             margin-bottom: 40px;
-            max-width: 680px;
             max-height: 524px;
+            max-width: 100%;
         }
     }
 
@@ -159,9 +169,6 @@
         }
 
         .imageContainer {
-            max-width: unset;
-            max-height: unset;
-            width: unset;
             margin-left: auto;
             margin-right: auto;
             height: 340px;
@@ -193,9 +200,8 @@
                 margin-top: 16px;
                 height: 88px;
                 h4 {
-                    font-size: 18px;
+                    font-size: 16px;
                     line-height: 22px;
-                    color: #0F384A;
                 }
             }
 
@@ -206,18 +212,16 @@
 
         .imageContainer {
             border-radius: unset;
-            margin-top: 24px;
-            margin-bottom: 24px;
-            max-width: 100%;
-            max-height: 246px;
-            display: flex;
-            justify-content: center;
+            margin: 24px -16px;
+            width: 100vw;
+            max-width: 100vw;
+            max-height: 300px;
 
             img {
                 max-width: unset;
                 max-height: unset;
-                width: auto;
-                height: auto;
+                width: 100%;
+                height: 100%;
             }
         }
     }
@@ -232,7 +236,6 @@
             padding-left: 16px;
             padding-right: 16px;
             padding-top: unset;
-            height: unset;
             width: 100%;
 
             .titleContainer {
@@ -242,19 +245,37 @@
             .description {
                 height: unset;
                 margin-top: 16px;
+
+                h4 {
+                    font-size: 18px;
+                }
             }
         }
 
         .imageContainer {
             margin: 32px 0;
-            height: 246px;
-            max-width: unset;
-            width: 100%;
+            height: 300px;
 
             img {
-                width: auto;
                 height: 100%;
             }
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    .container {
+        .imageContainer {
+            max-height: 246px;
+        }
+    }
+
+    .mediumContainer {
+        .imageContainer {
+            height: 246px;
+        }
+        .infoContainer {
+            height: 292px;
         }
     }
 }
