--- a/components/UI/ContainerTitle/ContainerTitle.module.scss
+++ b/components/UI/ContainerTitle/ContainerTitle.module.scss
@@ -43,6 +43,7 @@
     .titleContainer {
         padding: 0 16px 24px 16px;
         flex-direction: column;
+        align-items: start;
         gap: 15px;
     }
 
