--- a/components/UI/ContainerWithSidebar/NewsLibrary/NewsLibrary.module.scss
+++ b/components/UI/ContainerWithSidebar/NewsLibrary/NewsLibrary.module.scss
@@ -4,10 +4,16 @@
   display: flex;
   flex-direction: column;
   gap: 48px;
+
+  @media (max-width: 1024px) {
+    gap: 40px;
+  }
+  @media (max-width: 739px) {
+    gap: 16px;
+  }
 }
 
 .grid {
-
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
     gap: 16px;
@@ -19,9 +25,9 @@
 
     @media (max-width: 1024px) {
       grid-template-columns: repeat(2, 1fr); 
-      gap: 48px;
+      gap: 40px;
     }
-     @media (max-width: 500px) {
+     @media (max-width: 739px) {
       grid-template-columns: 1fr; 
       margin: 0 auto;
       gap: 16px;
