--- a/components/UI/ContainerWithSidebar/SchoolTeamLibrary/SchoolTeamLibrary.module.scss
+++ b/components/UI/ContainerWithSidebar/SchoolTeamLibrary/SchoolTeamLibrary.module.scss
@@ -1,6 +1,6 @@
 @import '/styles/variables';
 
-.staffаContainer {
+.staffContainer {
 	display: flex;
 	flex-direction: column;
 	gap: 48px;
@@ -26,7 +26,7 @@
 }
 
 @media (max-width: 1024px) {
-  .staffаContainer{
+  .staffContainer{
     .grid{
       width: 100%;
       grid-template-columns: repeat(1, 1fr);
