--- a/components/UI/ContainerWithSidebar/SidebarCategories/SidebarCategories.module.scss
+++ b/components/UI/ContainerWithSidebar/SidebarCategories/SidebarCategories.module.scss
@@ -104,11 +104,12 @@
     width: 100%;
     display: block;
     .dropdownHeader {
-      padding: 24px 32px;
+      padding: 13px 32px;
       border-radius: 28px;
       h3{
-        font-size: 16px;
-        line-height: 22px;
+        color: $primary-blue;
+        font-size: 22px;
+        line-height: 30px;
       }
       &.active {
         h3 {
@@ -124,15 +125,27 @@
     display: none;
   }
   .categoryDropdown {
-    width: 100%; 
- 
-  .dropdownList {
+    width: 100%;
 
-    &.active {
-      
-      margin-top: -50px;
+    .dropdownHeader {
+      padding: 16px 32px;
+      h3 {
+        color: $primary-blue;
+        font-size: 22px;
+        line-height: 30px;
+      }
     }
- 
-  } }
+
+    .dropdownList {
+      &.active {
+        margin-top: -50px;
+      }
+
+      p {
+        font-size: 18px;
+        line-height: 24px;
+      }
+    }
+  }
 }
 
