--- a/components/UI/MentorCardItem/MentorCardItem.module.scss
+++ b/components/UI/MentorCardItem/MentorCardItem.module.scss
@@ -5,24 +5,23 @@
   width: 100%;
   border: 1px solid $secondary-lite-blue;
   max-width: 432px;
-  max-height: 764px;
+  height: 764px;
 
   @media (max-width: 1024px) {
     max-width: 320px;
-    max-height: 502px;
+    max-height: 562px;
   }
 
   @media (max-width: 739px) {
-    max-width: 208px;
-    max-height: 366px;
+    max-width: 288px;
+    max-height: 530px;
   }
 }
 
 .imageWrapper {
   position: relative;
   width: 100%;
-  height: 100%;
-  max-height: 432px;
+  height: 432px;
   overflow: hidden;
   border-top-right-radius: 24px;
   border-top-left-radius: 24px;
@@ -32,7 +31,7 @@
   }
 
   @media (max-width: 739px) {
-    max-height: 208px;
+    max-height: 288px;
   }
 }
 
@@ -54,11 +53,6 @@
     padding: 16px;
   }
 
-  @media (max-width: 739px) {
-    gap: 10px;
-    padding: 10px;
-  }
-
   .personData {
     display: flex;
     flex-direction: column;
@@ -66,10 +60,6 @@
     padding: 0;
     @media (max-width: 1024px) {
       gap: 10px;
-    }
-
-    @media (max-width: 739px) {
-      gap: 8px;
     }
 
     .name {
@@ -87,20 +77,28 @@
         }
 
         @media (max-width: 739px) {
-          font-size: 12px;
-          line-height: 16px;
+          font-size: 16px;
+          line-height: 24px;
         }
       }
     }
 
     .biography {
-      color: $neutral-black;
       overflow: hidden;
-      max-height: 182px;
+      height: 182px;
       text-overflow: clip; 
 
+      p {
+        color: $neutral-black
+      }
+
       @media (max-width: 1024px) {
-        max-height: 80px;
+        height: 140px;
+
+        p {
+          font-size: 14px;
+          line-height: 20px;
+        }
       }
     }
   }
@@ -108,14 +106,18 @@
   .details {
     display: flex;
     justify-content: space-between;
-    .location {
-      @media (max-width: 739px) {
-        display: none;
-      }
+
+    .specialty p {
+      text-align: end;
     }
+
     .location p,
     .specialty p {
       color: $secondary-blue-2;
+      @media (max-width:  1024px) {
+        font-size: 14px;
+        line-height: 20px;
+      }
     }
   }
 }
