--- a/components/UI/RunningLines/RunningLine/RunningLine.module.scss
+++ b/components/UI/RunningLines/RunningLine/RunningLine.module.scss
@@ -11,6 +11,13 @@
   img {
     width: 100%;
     height: 100%;
+    min-width: 288px;
+    min-height: 120px;
+
+    @media (max-width: 739px) {
+      min-width: 100px;
+      min-height: 42px;
+    }
   }
 
 
