--- a/components/UI/VideoPlayer/VideoPlayer.module.scss
+++ b/components/UI/VideoPlayer/VideoPlayer.module.scss
@@ -1,118 +1,170 @@
+@import '/styles/variables';
+
 .videoContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  max-width: 1440px;
+  width: 100%;
   position: relative;
-  margin: 0 auto;
-  @media (max-width: 1024px) {
-    padding: 60px 32px;
-  }
 
-  @media (max-width: 768px) {
-    padding: 40px 16px;
-  }
-}
-
-.previewContainer {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-
-.previewImage {
-  width: 100%;
-  border-radius: 16px;
-}
-
-.playButton {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #f2f5fad9;
-  backdrop-filter: blur(5px);
-  padding: 24px;
-  border: none;
-  border-radius: 50px;
-  width: 88px;
-  height: 88px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.7); 
-  }
-
-  .playIcon {
-    color: white; 
-    font-size: 30px;
-  }
-}
-
-.caption {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
-  padding: 10px 20px;
-  background-color:  #F2F5FAD9;
-  border-radius: 100px;
-  width: 90%;
-  backdrop-filter: blur(5px);
-  padding: 8px 24px;
-}
-
-.videoFrame {
-  width: 100%;
-  video {
+  .previewContainer {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: auto;
-    border-radius: 24px; 
+
+    .previewImageContainer {
+      width: 100%;
+      height: 100%;
+
+      .previewImage {
+        width: 100%;
+        border-radius: 24px;
+      }
+
+      .playButton {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #f2f5fad9;
+        backdrop-filter: blur(5px);
+        padding: 24px;
+        border: none;
+        border-radius: 50px;
+        width: 88px;
+        height: 88px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.7);
+        }
+
+        .playIcon {
+          color: white;
+          font-size: 30px;
+        }
+      }
+    }
+
+    .caption {
+      position: absolute;
+      bottom: 10px;
+      text-align: center;
+      background-color:  #F2F5FAD9;
+      border-radius: 100px;
+      width: 90%;
+      backdrop-filter: blur(5px);
+      padding: 8px 24px;
+    }
+  }
+
+  .videoFrame {
+    width: 100%;
+    video {
+      width: 100%;
+      height: auto;
+      border-radius: 24px;
+    }
+  }
+}
+
+.newsVideoContainer {
+  .previewContainer {
+    .previewImageContainer {
+      .playButton {
+        .playIcon {
+          font-size: 20px;
+          color: $primary-blue;
+        }
+      }
+    }
+    .caption {
+      width: 100%;
+      bottom: 0;
+      border-radius: 24px;
+      font-weight: 600;
+      font-size: 26px;
+      line-height: 36px;
+      color: $neutral-black;
+      padding: 32px;
+      text-align: start;
+    }
   }
 }
 
 @media (max-width: 1024px) {
   .videoContainer {
-    padding: 20px 32px;
     .previewContainer{
-      .previewImage {
+      align-items: start;
 
-      }
-      .playButton{
-        padding: 16px;
-        width: 72px;
-        height: 72px;
-        .playIcon {
-          color: white; 
-          font-size: 22px;
+      .previewImageContainer {
+        aspect-ratio: 2/1;
+        position: relative;
+        border-radius: 16px;
+
+        .previewImage {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          border-radius: 16px;
+        }
+
+        .playButton {
+          padding: 16px;
+          width: 72px;
+          height: 72px;
+
+          .playIcon {
+            font-size: 22px;
+          }
         }
       }
       .caption{
-        position: absolute;
-        bottom: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        text-align: center;
-        padding: 8px 16px;
-        background-color:  #F2F5FAD9;
-        border-radius: 100px;
         width: 80%;
-        backdrop-filter: blur(5px);
-        padding: 8px 24px;
         font-weight: 400;
         font-size: 14px;
         line-height: 20px;
         color: #577481;
+      }
+    }
+    .videoFrame {
+      video {
+        border-radius: 16px;
+      }
+    }
+  }
+
+  .newsVideoContainer {
+    .previewContainer {
+      .previewImageContainer {
+        border-radius: 24px;
+
+        .previewImage {
+          border-radius: 24px;
+          object-fit: cover;
+        }
+      }
+      .caption {
+        width: 100%;
+        bottom: 0;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+        color: $neutral-black;
+        padding: 16px;
+      }
+    }
+    .videoFrame {
+      video {
+        border-radius: 24px;
       }
     }
   }
@@ -120,50 +172,56 @@
 
 @media (max-width: 739px) {
   .videoContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    padding: 16px 0;
-    .previewContainer{
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      height: 381px;
-      .previewImage {
-        width: auto;
+    .previewContainer {
+      height: 350px;
+      .previewImageContainer {
+        aspect-ratio: unset;
         border-radius: unset;
-        min-height: 349px;
-      }
-      .playButton{
-        padding: 16px;
-        width: 72px;
-        height: 72px;
-        display: flex;
-        .playIcon {
-          color: white; 
-          font-size: 22px;
+
+        .previewImage {
+          width: auto;
+          border-radius: unset;
         }
       }
       .caption{
-        position: absolute;
+        width: 100%;
         padding: 8px 16px;
-        background-color:  #F2F5FAD9;
-        width: 304px;
-        color: #577481;
+      }
+    }
+    .videoFrame {
+      video {
+        height: 340px;
+        border-radius: unset;
       }
     }
   }
-  .videoFrame {
-    width: 100%;
-    video {
-      width: 100%;
-      height: 420px;
-      border-radius: unset; 
+
+  .newsVideoContainer {
+    .previewContainer {
+      height: unset;
+
+      .previewImageContainer {
+        aspect-ratio: 1/0.54;
+
+        .previewImage {
+          height: 100%;
+          width: 100%;
+          border-radius: unset;
+        }
+      }
+
+      .caption {
+        width: 100%;
+        padding: 16px;
+        border-radius: 0;
+        position: relative;
+      }
+    }
+    .videoFrame {
+      padding-bottom: 40px;
+      video {
+        height: unset;
+      }
     }
   }
 }
