--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -170,7 +170,7 @@
 
             .footerInfo {
                 .linksInfo {
-                    justify-content: end;
+                    justify-content: flex-end;
                     gap: 12px;
                     min-width: 290px;
                 }
