--- a/components/Index/RQIndex/RQIndex.module.scss
+++ b/components/Index/RQIndex/RQIndex.module.scss
@@ -19,7 +19,7 @@
 	}
 	.headerContainer {
 		display: flex;
-		justify-content: start;
+		justify-content: flex-start;
 		align-items: center;
 		width: 100%;
 		height: 72px;
