--- a/components/UI/EducationApplication/EducationApplication.module.scss
+++ b/components/UI/EducationApplication/EducationApplication.module.scss
@@ -74,7 +74,7 @@
 			padding: 32px;
 			gap: 48px;
 			.topContainer {
-				justify-content: start;
+				justify-content: flex-start;
 				.formContainer {
 					gap: 32px;
 					.textContainer {
