--- a/components/UI/SliderWithPopup/SliderWithPopup.module.scss
+++ b/components/UI/SliderWithPopup/SliderWithPopup.module.scss
@@ -73,7 +73,7 @@
   .linkContainer {
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     cursor: pointer;
     gap: 16px;
 
