--- a/components/404page/NotFound.module.scss
+++ b/components/404page/NotFound.module.scss
@@ -37,7 +37,7 @@
 
   .headerContainer {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
     height: 72px;
