--- a/components/Biography/QuoteCard/QuoteCard.module.scss
+++ b/components/Biography/QuoteCard/QuoteCard.module.scss
@@ -66,7 +66,7 @@
     .author{
       display: flex;
       flex-direction: column;
-      justify-content: start;
+      justify-content: flex-start;
       gap: 8px;
       // height: unset;
       .quoteIcon{
