--- a/components/IntelligentVolunteers/PaymentSecurity/PaymentSecurity.module.scss
+++ b/components/IntelligentVolunteers/PaymentSecurity/PaymentSecurity.module.scss
@@ -8,7 +8,7 @@
 
 	.headerContainer {
 		display: flex;
-		justify-content: start;
+		justify-content: flex-start;
 	}
 	.mainContainer {
 		display: flex;
