--- a/components/UI/BannerSlider/BannerSlider.module.scss
+++ b/components/UI/BannerSlider/BannerSlider.module.scss
@@ -25,7 +25,7 @@
 
     .pagination {
       display: flex;
-      justify-content: start;
+      justify-content: flex-start;
       width: 100%;
       left: 56px;
     }
