--- a/components/UI/Buttons/ApplyButton/ApplyButton.module.scss
+++ b/components/UI/Buttons/ApplyButton/ApplyButton.module.scss
@@ -7,7 +7,7 @@
 
 	& > div {
 		position: relative;
-		width: 100%;
+		width: calc(100% - 2px);
 		height: 100%;
 		transition: background-color 0.3s ease-out;
 		background-color: $primary-red;
