Add updates for mobile version

--- a/components/Publications/PublicationLibrary/PublicationLibrary.module.scss
+++ b/components/Publications/PublicationLibrary/PublicationLibrary.module.scss
@@ -21,6 +21,6 @@
 @media (max-width: 739px) {
     .libraryContainer {
         gap: 20px;
-        padding: 20px;
+        padding: 40px 16px 60px 16px;
       }
 }
