--- a/components/Index/SchoolNewsSlider/CardItem/CardItem.module.scss
+++ b/components/Index/SchoolNewsSlider/CardItem/CardItem.module.scss
@@ -31,6 +31,7 @@
 			display: flex;
 			flex-direction: column;
 			gap: 16px;
+			overflow: hidden;
 			max-height: 175px;
 			.title {
 				font-family: Nunito;
@@ -101,9 +102,9 @@
 		.cardBody {
 			max-height: 216px;
 			padding: 16px;
-			gap: 8px;
+			gap: 6px;
 			.cardBodyText {
-				height: 156px;
+				height: 125px;
 				gap: 12px;
 				.title {
 					font-family: Nunito;
@@ -116,8 +117,18 @@
 					font-weight: 400;
 					font-size: 14px;
 					line-height: 20px;
-					max-height: 96px;
+					max-height: 82px;
 					overflow: hidden;
+				}
+			}
+			.cardFooter {
+				height: 40px;
+				.categoryContainer {
+					gap: 0;
+					p {
+						font-size: 14px;
+						line-height: 20px;
+					}
 				}
 			}
 		}
@@ -141,18 +152,17 @@
 			padding: 10px;
 			gap: 8px;
 			.cardBodyText {
-				height: 138px;
+				height: 112px;
 				gap: 8px;
 				.title {
 					font-size: 14px;
 					line-height: 20px;
-					max-height: 40px;
-					overflow: hidden;
 				}
 				.description {
 					font-size: 12px;
 					line-height: 16px;
-					max-height: 90px;
+					height: unset;
+					max-height: unset;
 					overflow: hidden;
 				}
 			}
