--- a/components/UI/ContainerWithSidebar/NewsLibrary/NewsLibrary.module.scss
+++ b/components/UI/ContainerWithSidebar/NewsLibrary/NewsLibrary.module.scss
@@ -17,8 +17,8 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
     gap: 16px;
-  
-    @media (max-width: 1400px) {
+
+    @media (max-width: 1280px) {
       grid-template-columns: 1fr; 
       margin: 0 auto;
     }
@@ -27,10 +27,12 @@
       grid-template-columns: repeat(2, 1fr); 
       gap: 40px;
     }
-     @media (max-width: 739px) {
-      grid-template-columns: 1fr; 
-      margin: 0 auto;
+    @media (max-width: 739px) {
       gap: 16px;
+    }
+    @media (max-width: 624px) {
+      grid-template-columns: 1fr;
+      margin: 0 auto;
     }
   }
   
