--- a/components/UI/ContainerWithSidebar/PublicationLibrary/PublicationLibrary.module.scss
+++ b/components/UI/ContainerWithSidebar/PublicationLibrary/PublicationLibrary.module.scss
@@ -7,12 +7,11 @@
 }
 
 .grid {
-
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
     gap: 16px;
   
-    @media (max-width: 1400px) {
+    @media (max-width: 1280px) {
       grid-template-columns: 1fr; 
       margin: 0 auto;
     }
@@ -21,11 +20,12 @@
       grid-template-columns: repeat(2, 1fr); 
       gap: 40px;
     }
-
-    @media (max-width: 480px) {
-      grid-template-columns: 1fr; 
-      margin: 0 auto;
-      gap: 16px
+    @media (max-width: 739px) {
+        gap: 16px;
+    }
+    @media (max-width: 624px) {
+        grid-template-columns: 1fr;
+        margin: 0 auto;
     }
   }
   
