style refactor of card item text

--- a/components/UI/Cards/CardItem/CardItem.module.scss
+++ b/components/UI/Cards/CardItem/CardItem.module.scss
@@ -85,7 +85,7 @@
   word-wrap: break-word;
   text-overflow: ellipsis;
   position: relative;
-  display: -webkit-box;
+  //display: -webkit-box;
   line-height: 26px;
   -webkit-line-clamp: 7;
 
