--- a/components/CompletedEnrolments/MentorsAndGraduates/MentorsAndGraduates.module.scss
+++ b/components/CompletedEnrolments/MentorsAndGraduates/MentorsAndGraduates.module.scss
@@ -6,23 +6,177 @@
   padding: 80px 56px;
   max-width: 1440px;
   @media (max-width: 1024px) {
-    padding: 60px 32px ;
-}
- 
-@media (max-width: 1024px) {
-    padding: 40px 32px;
-}
-  .gridContainer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    gap: 20px; 
-    padding: 20px;
-    margin: 0 auto;
+    padding: 60px 32px;
+  }
+  @media (max-width: 739px) {
+    padding: 40px 16px;
+  }
+
+  .titleContainer {
+    margin: 10px 0;
     @media (max-width: 1024px) {
-      grid-template-columns: repeat(2, 1fr); 
+      margin: 0;
     }
-     @media (max-width: 739px) {
-      grid-template-columns: repeat(1, 1fr); 
-     }
+  }
+
+  .gridContainer {
+    margin-top: 56px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 64px;
+
+    @media (max-width: 1024px) {
+      margin-top: 32px;
+      gap: 20px;
+    }
+    @media (max-width: 739px) {
+      margin-top: 24px;
+      gap: 32px;
+    }
+  }
+
+  .personContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    @media (max-width: 1024px) {
+      gap: 40px;
+    }
+    @media (max-width: 739px) {
+      display: none;
+    }
+    .personItem {
+      width: 33%;
+      @media (max-width: 1024px) {
+        width: 50%;
+      }
+    }
+    .graduatesContainer {
+      width: 66%;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 16px;
+
+      @media (max-width: 1024px) {
+        width: 50%;
+        grid-template-columns: repeat(1, 1fr);
+      }
+    }
+  }
+
+  .personSwiperContainer {
+    position: relative;
+    width: 100vw;
+    margin-left: -16px;
+    display: none;
+    @media (max-width: 739px) {
+      display: block;
+    }
+  }
+}
+
+.swiperContainer {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+
+  .swiperSlide {
+    width: 208px;
+    border-radius: 12px;
+    margin: 0 8px;
+    .personSwiperItem {
+      width: 208px;
+      max-height: 366px;
+    }
+  }
+}
+
+.mentorCard {
+  width: 208px;
+  max-height: 366px;
+  aspect-ratio: 1.84;
+  border: 1px solid $secondary-lite-blue;
+  background-color: white;
+  border-radius: 12px;
+
+  .imageWrapper {
+    position: relative;
+    width: 100%;
+    aspect-ratio: 1;
+    overflow: hidden;
+    border-top-right-radius: 12px;
+    border-top-left-radius: 12px;
+  }
+
+  .image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .content {
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    overflow: hidden;
+
+
+    .personData {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      padding: 0;
+
+      .name {
+        h5 {
+          font-family: Nunito, sans-serif;
+          font-size: 14px;
+          font-weight: 600;
+          line-height: 20px;
+          text-align: left;
+          color: $primary-blue;
+        }
+      }
+
+      .biography {
+        overflow: hidden;
+        height: 80px;
+        text-overflow: clip;
+
+        p {
+          color: $neutral-black;
+          font-size: 12px;
+          font-weight: 400;
+          line-height: 16px;
+        }
+      }
+    }
+
+    .details {
+      display: flex;
+      justify-content: space-between;
+
+      .specialty p {
+        text-align: end;
+      }
+
+      .location p,
+      .specialty p {
+        color: $secondary-blue-2;
+        font-size: 14px;
+        line-height: 20px;
+      }
+    }
+  }
+}
+
+.mentorSmallCard {
+  .content {
+    .personData {
+      .biography {
+        height: 0;
+      }
+    }
   }
 }
