--- a/components/UI/BannerSlider/Banner/Banner.module.scss
+++ b/components/UI/BannerSlider/Banner/Banner.module.scss
@@ -39,9 +39,15 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            flex-direction: row;
             gap: 16px;
 
+            @media (max-width: 739px) {
+                flex-direction: column;
+            }
+
             .cardContainer {
+                min-height: 125px;
                 width: 100%;
                 display: flex;
                 flex-direction: column;
@@ -493,12 +499,15 @@
             display: block;
             margin: 0 auto;
         }
-
         .tabletPagination {
             display: none;
         }
     }
-
+    .largeContainer {
+        .infoContainer {
+            height: unset;
+        }
+    }
     .mediumContainer {
         height: unset;
         padding: 24px 0;
