--- a/components/UI/MentorCardItem/MentorCardItem.module.scss
+++ b/components/UI/MentorCardItem/MentorCardItem.module.scss
@@ -22,6 +22,16 @@
   }
 }
 
+.mentorSmallCard {
+  .content {
+    .personData {
+      .biography {
+        height: 0;
+      }
+    }
+  }
+}
+
 .imageWrapper {
   position: relative;
   width: 100%;
@@ -29,12 +39,6 @@
   overflow: hidden;
   border-top-right-radius: 24px;
   border-top-left-radius: 24px;
-
-  @media (max-width: 1024px) {
-  }
-
-  @media (max-width: 739px) {
-  }
 }
 
 .image {
