--- a/components/TeachingStaff/Mentors/Mentors.module.scss
+++ b/components/TeachingStaff/Mentors/Mentors.module.scss
@@ -33,6 +33,7 @@
           }
         }
         .description{
+          overflow: hidden;
           p {
             font-family: Nunito;
             font-weight: 400;
