--- a/components/Header/Menu/Menu.module.scss
+++ b/components/Header/Menu/Menu.module.scss
@@ -12,6 +12,14 @@
         height: 55px;
         min-width: 230px;
     }
+
+    .closeArea {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+    }
 }
 
 .lightContainer {
@@ -43,6 +51,10 @@
             height: 100%;
             min-width: unset;
             margin: 24px auto 32px;
+        }
+
+        .closeArea {
+            display: none;
         }
     }
 
