--- a/components/UI/PersonItem/Modal/Modal.module.scss
+++ b/components/UI/PersonItem/Modal/Modal.module.scss
@@ -13,13 +13,16 @@
   align-items: center;
   z-index: 1000;
   padding: 20px;
+
+  @media (max-width: 739px) {
+    padding: 0;
+    overflow-y: auto;
+  }
 }
 
 .modalContent {
   background-color: #fff;
-  padding: 20px;
   border-radius: 16px;
-  max-width: 90%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -27,6 +30,12 @@
   max-width: 1000px;
   padding: 72px 32px 32px 32px;
   width: 100%;
+
+  @media (max-width: 739px) {
+    padding: 40px 16px 8px 16px;
+    height: 80vh;
+    overflow: hidden;
+  }
 }
 .modalHeader {
   width: 100%;
@@ -40,13 +49,100 @@
     top: 20px;
     right: 32px;
     color: $secondary-blue-2;
+    @media (max-width: 739px) {
+      top: 12px;
+      right: 12px;
+    }
   }
 }
+
+.modalDataMobile {
+  display: none;
+  justify-content: space-between;
+  flex-direction: column;
+  position: relative;
+  overflow: auto;
+  @media (max-width: 739px) {
+    display: flex;
+  }
+
+  .modalDataHeader {
+    position: sticky;
+    margin-bottom: 16px;
+  }
+  .modalDataLine {
+    position: relative;
+    .modalLine {
+      position: absolute;
+      height: 8px;
+      background: linear-gradient(180deg, #FFFFFF 41%, rgba(255, 255, 255, 0.6) 100%);
+      width: 100%;
+    }
+  }
+  .modalDataLineScroll {
+    z-index: 1;
+  }
+  .modalDataBody {
+    overflow-y: auto;
+    .bodyInfo {
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      gap: 24px;
+
+      .imageContainer {
+        position: relative;
+        width: 100%;
+        aspect-ratio: 1;
+
+        img {
+          border-radius: 12px;
+          position: absolute;
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+          max-width: unset;
+          max-height: unset;
+        }
+      }
+
+      .biography {
+        p {
+          font-size: 16px;
+          line-height: 24px;
+        }
+      }
+    }
+
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $secondary-blue-2;
+      border-radius: 100px;
+      min-height: 30px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: $secondary-ultra-lite-blue;
+      border-radius: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: $secondary-blue-2;
+    }
+  }
+}
+
 .modalData {
   display: flex;
   justify-content: space-between;
   height: 100%;
-
+  @media (max-width: 739px) {
+    display: none;
+  }
 }
 .modalLeft {
   width: 50%;
@@ -59,6 +155,9 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  @media (max-width: 739px) {
+    gap: 4px;
+  }
 }
 .name {
   h4 {
@@ -68,28 +167,40 @@
     font-weight: 600;
     line-height: 36px;
     text-align: left;
+    @media (max-width: 739px) {
+      font-size: 18px;
+      line-height: 25px;
+    }
+  }
+}
+.position {
+  @media (max-width: 739px) {
+    font-size: 16px;
+    line-height: 24px;
   }
 }
 .biography {
   overflow-y: auto;
-  // Стилизация скролла
+  @media (max-width: 739px) {
+    overflow-y: unset;
+  }
   &::-webkit-scrollbar {
-    width: 8px; // Ширина скроллбара
+    width: 8px;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: $secondary-blue-2; // Цвет бегунка
-    border-radius: 100px; // Округление бегунка
-    min-height: 30px; // Минимальная высота бегунка
+    background-color: $secondary-blue-2;
+    border-radius: 100px;
+    min-height: 30px;
   }
 
   &::-webkit-scrollbar-track {
-    background-color: $secondary-ultra-lite-blue; // Цвет фона трека
-    border-radius: 8px; // Округление трека
+    background-color: $secondary-ultra-lite-blue;
+    border-radius: 8px;
   }
 
   &::-webkit-scrollbar-thumb:hover {
-    background-color: $secondary-blue-2; // Цвет бегунка при наведении
+    background-color: $secondary-blue-2;
   }
   p {
     color: $secondary-blue-2;
