--- a/components/UI/PersonItem/PersonItem.module.scss
+++ b/components/UI/PersonItem/PersonItem.module.scss
@@ -30,7 +30,7 @@
     gap: 42px;
     @media (max-width: 739px) {
       padding: 16px;
-      align-items: center;
+      align-items: flex-start;
       justify-content: center;
     }
   }
