Resolve problem with mentors person card modal

--- a/components/UI/PersonItem/Modal/Modal.module.scss
+++ b/components/UI/PersonItem/Modal/Modal.module.scss
@@ -109,6 +109,7 @@
 
       .biography {
         p {
+          white-space: pre-wrap;
           font-size: 16px;
           line-height: 24px;
         }
@@ -204,6 +205,7 @@
   }
   p {
     color: $secondary-blue-2;
+    white-space: pre-wrap;
   }
 }
 .modalRight {
