--- a/components/VideoAtlas/Graduates/Graduates.module.scss
+++ b/components/VideoAtlas/Graduates/Graduates.module.scss
@@ -16,11 +16,12 @@
 
 .gridGraduates {
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(3,1fr);
   gap: 16px;
   margin: 0 auto;
+  width: 100%;
   @media (max-width: 1380px) {
-    grid-template-columns: repeat(2,2fr);
+    grid-template-columns: repeat(3,1fr);
   }
   @media (max-width: 1024px) {
     display: none;
@@ -35,15 +36,19 @@
   display: none;
   @media (max-width: 1024px) {
     display: block;
-    width: 100vw;
-    margin: 0 -32px;
   }
   @media (max-width: 739px) {
     display: none;
   }
+
+  .swiper {
+    width: 100vw;
+    margin: 0 -32px;
+  }
 }
 
 .card {
+  width: 100%;
   border-radius: 24px;
   border: 1px solid $secondary-lite-blue;
   display: flex;
@@ -51,21 +56,22 @@
   align-items: center;
   transition: transform 0.2s ease-in-out;
   gap: 8px;
-  width: 320px;
   height: 174px;
   justify-content: space-between;
-
-  //   &:hover {
-  //     transform: translateY(-5px);
-  //   }
+  @media (max-width: 1024px) {
+    width: 320px;
+  }
 }
 .name {
   display: flex;
-  width: 114px;
   height: 56px;
+  padding-left: 24px;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  @media (max-width: 739px) {
+    padding-left: 16px;
+  }
   h5 {
     font-family: Nunito;
     font-size: 20px;
@@ -73,8 +79,7 @@
     line-height: 28px;
     color: $primary-blue;
     overflow: hidden;
-
-    text-align: center;
+    text-align: start;
     @media (max-width: 1024px) {
       font-size: 18px;
       line-height: 24px;
