--- a/components/UI/Cards/CardItem/CardItem.module.scss
+++ b/components/UI/Cards/CardItem/CardItem.module.scss
@@ -85,7 +85,6 @@
   word-wrap: break-word;
   text-overflow: ellipsis;
   position: relative;
-  //display: -webkit-box;
   line-height: 26px;
   -webkit-line-clamp: 7;
 
@@ -144,7 +143,7 @@
 @media (max-width: 1024px) {
   .card {
     max-width: 320px;
-    width: 100%;
+    width: 320px;
     height: 382px;
     border-radius: 16px;
 
@@ -213,7 +212,7 @@
 
 @media (max-width: 739px) {
   .card {
-    width: 100%;
+    width: 208px;
     height: 290px;
     border-radius: 12px;
 
