--- a/components/UI/EducationApplication/EducationApplication.module.scss
+++ b/components/UI/EducationApplication/EducationApplication.module.scss
@@ -113,7 +113,7 @@
 
 @media (max-width: 739px) {
 	.container {
-		padding: 40px 0;
+		padding:  0;
 		.main {
 			padding: 40px 16px;
 			border-radius: unset;
