--- a/components/CompletedEnrolments/Listeners/Listeners.module.scss
+++ b/components/CompletedEnrolments/Listeners/Listeners.module.scss
@@ -115,9 +115,9 @@
       border: 1px solid $secondary-lite-blue;
       border-radius: 24px;
       transition: transform 0.2s ease-in-out;
-      &:hover {
-        transform: translateY(-5px);
-      }
+      // &:hover {
+      //   transform: translateY(-5px);
+      // }
       .name{
         display: flex;
         justify-content: center;
@@ -164,9 +164,9 @@
         border: 1px solid $secondary-lite-blue;
         border-radius: 24px;
         transition: transform 0.2s ease-in-out;
-        &:hover {
-          transform: translateY(-5px);
-        }
+        // &:hover {
+        //   transform: translateY(-5px);
+        // }
         .name{
           display: flex;
           justify-content: center;
