--- a/components/SpecializationAndProgram/Header/Header.module.scss
+++ b/components/SpecializationAndProgram/Header/Header.module.scss
@@ -5,7 +5,7 @@
 	width: 100%;
 	.headerContainerInner {
 		max-width: 1440px;
-		padding: 48px 56px 0 48px;
+		padding: 48px 56px ;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
@@ -54,19 +54,20 @@
 		}
 	}
 
-	.runningLine {
-		position: relative;
-		padding: 80px 0;
-		max-width: 100%;
-		height: auto;
-		display: flex;
-		flex-direction: column;
-		gap: 24px;
-		overflow: hidden;
 
-		@media (max-width: 739px) {
-			padding: 20px 0;
-		}
+}
+.runningLine {
+	position: relative;
+	padding: 40px 0;
+	max-width: 100%;
+	height: auto;
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+	overflow: hidden;
+
+	@media (max-width: 739px) {
+		padding: 20px 0;
 	}
 }
 @media (max-width: 1024px) {
