--- a/components/UI/VideoPlayer/VideoPlayer.module.scss
+++ b/components/UI/VideoPlayer/VideoPlayer.module.scss
@@ -77,6 +77,11 @@
   .videoFrame {
     width: 100%;
     video {
+     
+      -webkit-appearance: none;
+      appearance: none;
+      controls: false;
+
       width: 100%;
       height: auto;
       border-radius: 24px;
