--- a/components/Index/SchoolNewsSlider/CustomCoverflowSlider/CustomCoverflowSlider.module.scss
+++ b/components/Index/SchoolNewsSlider/CustomCoverflowSlider/CustomCoverflowSlider.module.scss
@@ -16,6 +16,13 @@
             background: $neutral-white;
         }
 
+        .disableSlideAction {
+            -webkit-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            pointer-events: none;
+        }
+
         .slideImage {
             width: 100%;
             height: 100%;
@@ -48,6 +55,50 @@
         }
     }
 
+    .imageGallerySlider {
+        height: 504px;
+
+        @media (max-width: 1024px) {
+            height: 464px;
+        }
+        @media (max-width: 739px) {
+            height: 220px;
+        }
+        .slide {
+            background: $neutral-white;
+            max-width: 656px;
+            max-height: 344px;
+            overflow: hidden;
+            border-radius: 24px;
+
+            @media (max-width: 1024px) {
+                max-width: 656px;
+                max-height: 344px;
+            }
+            @media (max-width: 739px) {
+                max-width: 266px;
+                max-height: 140px;
+                border-radius: 16px;
+            }
+        }
+
+        .imageContainer {
+            width: 656px;
+            height: 344px;
+            @media (max-width: 739px) {
+                width: 266px;
+                height: 140px;
+            }
+            img {
+                position: absolute;
+                width: 100%;
+                height: auto;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+        }
+
+    }
     .sliderButton {
         position: absolute;
         top: 50%;
