--- a/components/UI/PersonItem/Modal/Modal.module.scss
+++ b/components/UI/PersonItem/Modal/Modal.module.scss
@@ -11,12 +11,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 9999;
   padding: 20px;
+  overflow: hidden;
 
   @media (max-width: 739px) {
     padding: 0;
     overflow-y: auto;
+    height: 100vh;
   }
 }
 
@@ -32,12 +34,19 @@
   width: 100%;
 
   @media (max-width: 739px) {
-    padding: 40px 16px 8px 16px;
-    height: 80vh;
-    overflow: hidden;
+    padding: 16px;
+    height: 100vh;
+    width: 100vw;
+    border-radius: 0;
+    max-height: none;
+    max-width: none;
+    overflow: auto;
   }
 }
+
 .modalHeader {
+  position: relative;
+  z-index: 9999;
   width: 100%;
   
   .closeButton {
@@ -49,6 +58,8 @@
     top: 20px;
     right: 32px;
     color: $secondary-blue-2;
+    z-index: 10000;
+
     @media (max-width: 739px) {
       top: 12px;
       right: 12px;
@@ -62,16 +73,21 @@
   flex-direction: column;
   position: relative;
   overflow: auto;
+
   @media (max-width: 739px) {
     display: flex;
   }
 
   .modalDataHeader {
     position: sticky;
+    top: 0;
     margin-bottom: 16px;
+    z-index: 9999;
   }
+
   .modalDataLine {
     position: relative;
+    
     .modalLine {
       position: absolute;
       height: 8px;
@@ -79,11 +95,15 @@
       width: 100%;
     }
   }
+
   .modalDataLineScroll {
     z-index: 1;
   }
+
   .modalDataBody {
     overflow-y: auto;
+    overscroll-behavior-y: contain;
+
     .bodyInfo {
       height: 100%;
       display: flex;
@@ -141,10 +161,12 @@
   display: flex;
   justify-content: space-between;
   height: 100%;
+
   @media (max-width: 739px) {
     display: none;
   }
 }
+
 .modalLeft {
   width: 50%;
   display: flex;
@@ -156,10 +178,12 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+
   @media (max-width: 739px) {
     gap: 4px;
   }
 }
+
 .name {
   h4 {
     color: $neutral-black;
@@ -168,23 +192,29 @@
     font-weight: 600;
     line-height: 36px;
     text-align: left;
+
     @media (max-width: 739px) {
       font-size: 18px;
       line-height: 25px;
     }
   }
 }
+
 .position {
   @media (max-width: 739px) {
     font-size: 16px;
     line-height: 24px;
   }
 }
+
 .biography {
   overflow-y: auto;
+  overscroll-behavior-y: contain;
+
   @media (max-width: 739px) {
     overflow-y: unset;
   }
+
   &::-webkit-scrollbar {
     width: 8px;
   }
@@ -203,11 +233,13 @@
   &::-webkit-scrollbar-thumb:hover {
     background-color: $secondary-blue-2;
   }
+
   p {
     color: $secondary-blue-2;
     white-space: pre-wrap;
   }
 }
+
 .modalRight {
   width: 45%;
   display: flex;
@@ -220,9 +252,11 @@
   max-height: 595px;
   width: 100%;
   height: 100%;
+  
   img {
     width: 100%;
     height: 100%;
   }
+
   border-radius: 24px;
 }
